apps/minio/service.yaml
#
# From https://github.com/minio/minio/blob/master/docs/orchestration/kubernetes/minio-standalone-service.yaml
#
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: minio-service
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: minio
