apps/minio/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: minio-route
spec:
  to:
    kind: Service
    # Match against service metadata name
    name: minio-service
  tls:
    termination: passthrough
